# ChatRoom_WebSocket_Flask

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  routes.py
FrontEnd/: rooms.py  users.py
controllers/: message.py  participants.py  rooms.py  users.py
models/: message.py  participants.py  rooms.py  users.py
services/: message.py  participants.py  rooms.py  users.py
static/css/: chat-room.css  login.css  register.css  toast.css
templates/: chat-room.html  list-room.html  login.html  register.html
utils/: Password.py  response.py
